# php-quickjs

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  api.md  architecture.md  errors.md  execution-modes.md  install.md
examples/: kitchen_sink.php  modes.php  usage.php
examples/lambda/: Dockerfile  README.md  index.php  serverless.yml
src/: bridge.rs  callback.rs  engine.rs  error.rs  exceptions.rs  handles.rs  lib.rs  manifest.rs  marshal.rs  sandbox.rs  transpile.rs
src/js/: msgpack.js  runtime.js
stubs/: php_quickjs.stubs.php
tests/php/: 01_eval_basic.php  02_marshal_roundtrip.php  03_register_dispatch.php  04_callbacks_bidir.php  05_handles.php  06_errors.php  07_sandbox_timeout.php  08_dts_generation.php  09_typescript.php  10_scope_isolation.php  _harness.php
