[package]
name = "php_quickjs"
version = "0.0.2"
edition = "2021"
rust-version = "1.96"
description = "Embed a QuickJS sandbox in PHP with typed, bidirectional communication"
license = "MIT"
authors = ["Edd Mann <the@eddmann.com>"]
repository = "https://github.com/eddmann/php-quickjs"
homepage = "https://github.com/eddmann/php-quickjs"
readme = "README.md"
keywords = ["php", "quickjs", "javascript", "typescript", "sandbox"]
categories = ["api-bindings", "development-tools::ffi"]

[lib]
name = "php_quickjs"
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = { version = "0.15", features = ["closure"] }
rquickjs = { version = "0.12", default-features = false, features = [
    "std",
    "macro",
    "classes",
    "array-buffer",
] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
rmp-serde = "1"
serde_json = "1"

# TypeScript fast path: transpile guest TS -> JS in-process, remap errors.
oxc = { version = "0.137", features = ["full"] }
sourcemap = "9"
lru = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
panic = "unwind"
